Use Math.clamp instead of Math.max Math.min